hphp/hack/test/typecheck/yield_from2.php.like_types.exp
File "yield_from2.php", line 7, characters 3-16:
Invalid yield from (Typing[4110])
File "yield_from2.php", line 7, characters 3-16:
Expected void
File "yield_from2.php", line 6, characters 38-41:
But got dynamic because it is an unenforceable type
